working with updated readme

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,27 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">ry</h2>
+        <h2 class="card-title">Ryan</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ry</li>
+            <li class="list-group-item">ID: ry@fakemail.com</li>
             <li class="list-group-item">Email: <a href="mailto:28">28</a></li>
-            <li class="list-group-item">Office number: 011</li>
+            <li class="list-group-item">Office number: 101</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Grace</h2>
+        <h2 class="card-title">Tina</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: tina@fakemail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:22">22</a></li>
+            <li class="list-group-item">Office number: 102</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Gracie</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ryryr</li>
-            <li class="list-group-item">Email: <a href="mailto:44">44</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/fsdf" target="_blank" rel="noopener noreferrer">fsdf</a></li>
+            <li class="list-group-item">ID: grace@fakemail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:17">17</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/grace17" target="_blank" rel="noopener noreferrer">grace17</a></li>
         </ul>
     </div>
 </div>
@@ -56,8 +69,8 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: vgsdgs</li>
-            <li class="list-group-item">Email: <a href="mailto:33">33</a></li>
+            <li class="list-group-item">ID: penepn@fakemail.com</li>
+            <li class="list-group-item">Email: <a href="mailto:31">31</a></li>
             <li class="list-group-item">School: UCLA</li>
         </ul>
     </div>
